Java 21 Updates
- HL7 Core Library v6.7.10
- Maven dependencies updated
- javax imports migrated to jakarta
- Prime Faces update to v15